//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package spine.system.server;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option (internal_all) = true;

option java_package = "io.spine.system.server";
option java_outer_classname = "CommandLifecycleCommandsProto";
option java_multiple_files = true;

import "spine/base/error.proto";
import "spine/core/command.proto";
import "spine/core/event.proto";
import "spine/system/server/command_lifecycle.proto";

// Marks a domain command as received.
//
message MarkCommandAsReceived {

    // The ID of the command.
    spine.core.CommandId id = 1;

    // The command.
    spine.core.Command payload = 2 [(required) = true];
}

// Marks a domain command as acknowledged.
//
message MarkCommandAsAcknowledged {

    // The ID of the command.
    spine.core.CommandId id = 1;
}

// Schedules a domain command.
//
// See `spine.system.server.ScheduledCommandRecord` projection for the scheduled command
// representation.
//
message ScheduleCommand {

    // The ID of the command.
    spine.core.CommandId id = 1;

    // The schedule to execute the command.
    spine.core.CommandContext.Schedule schedule = 2 [(valid) = true];
}

// Marks a domain command as dispatched.
//
message MarkCommandAsDispatched {

    // The ID of the command.
    spine.core.CommandId id = 1;
}

// Assigns a target to a command.
//
// This command is posted when the command target is determined, but before the command is delivered
// to the target.
//
message AssignTargetToCommand {

    // The ID of the command.
    spine.core.CommandId id = 1;

    // The command target.
    CommandTarget target = 2 [(valid) = true];
}

// Marks a domain command as handled.
//
// Posted only after a successful command handling.
//
message MarkCommandAsHandled {

    // The ID of the command.
    spine.core.CommandId id = 1;
}

// Marks a domain command as handled.
//
// Posted if command processing caused a runtime error at any point.
//
message MarkCommandAsErrored {

    // The ID of the command.
    spine.core.CommandId id = 1;

    // The runtime error.
    spine.base.Error error = 2 [(required) = true];
}

// Marks a domain command as rejected.
//
// Posted if the command handler has rejected the command.
//
message MarkCommandAsRejected {

    // The ID of the command.
    spine.core.CommandId id = 1;

    // The command rejection event.
    spine.core.Event rejection_event = 2 [(valid) = true];
}

// Marks a command as one which was transformed into another command.
//
// Posted when a commanding method created one command in response to an incoming one.
// For the case of more than one produced command, please use `MarkSplit`.
//
message MarkTransformed {

    // The ID of the command.
    spine.core.CommandId id = 1;

    // The ID of the command generated in response to the received command.
    spine.core.CommandId produced = 2 [(required) = true];
}

// Marks a command which cased two or more commands.
//
// Posted when a commanding method created two or more commands in response to an incoming one.
//
message MarkSplit {

    // The ID of the command.
    spine.core.CommandId id = 1;

    // Identifiers of commands generated in response to the `source` command.
    //
    // There must be two or more produced commands.
    // For one produced command please use `MarkTransformed`.
    //
    repeated core.CommandId produced = 2 [(required) = true];
}

// Mark a command as one which was created in response to an event.
//
// Posted when a commanding method creates one or more commands in response to an incoming event.
//
message MarkCausedByEvent {

    // The ID of the command.
    spine.core.CommandId id = 1;

    // The ID of the event which cased the command.
    spine.core.EventId origin = 2;
}
